--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>SearchEngine</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <meta charset="UTF-8" />
-    <link href="src/stylesW5.css" rel="stylesheet" type="text/css" />
+    <link href="stylesW5.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
@@ -73,6 +73,6 @@
         </div>
       </div>
     </div>
-    <script src="src/indexW5.js"></script>
+    <script src="indexW5.js"></script>
   </body>
 </html>
