Added Hosted with&button

--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
           </div>
         </div>
       </div>
+      <p>
+        Hosted with
+        <a href="https://www.netlify.com/" target="_blank">Netlify</a>
+        <br />
+        <button>
+          <a href="mailto:yuldenis@gmail.com">Contact me</a>
+        </button>
+      </p>
     </div>
     <script src="indexW5.js"></script>
   </body>
