--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
       </div>
       <p>
         Hosted with
-        <a href="https://www.netlify.com/" target="_blank">Netlify</a>
+        <a href="https://www.netlify.com/" target="_blank" rel="noreferrer"
+          >Netlify</a
+        >
         <br />
         <button>
           <a href="mailto:yuldenis@gmail.com">Contact me</a>
